# Raytracer

./: .gitignore  CMakeLists.txt  Makefile  Makefile-JeanJean  Makefile1  Recap_raytracer  Segfault.txt  a.out  bump.xpm  cubic_solver.c  dam_bump.xpm  hyperb.xml  hyperboloid.xml  limit.xml  list.txt  loading.c  main.c  monkey.xml  my_conf.xml  my_make  my_strncpy.c  perlin.c  pring.xml  pringles.xml  rt  rtracer  rtv1  test.xml  test.xpm  test_bright.xml  test_perlin.xml  text_perl.xpm  toto  veyri_ma
images/: damier.xpm  heightmap.xpm  jupiter.xpm  oth.xpm  sun.xpm
include/: #mesh.h#  get_next_line.h  mesh.h  minilibx_system.h  prototypes.h  solver.h
loader/: 0.xpm  10.xpm  100.xpm  110.xpm  120.xpm  130.xpm  140.xpm  150.xpm  160.xpm  170.xpm  180.xpm  190.xpm  20.xpm  30.xpm  40.xpm  50.xpm  60.xpm  70.xpm  80.xpm  90.xpm
loader2/: 10.xpm  full.xpm
minilibx/: CMakeLists.txt  mlx_int.h  strlcpy.c
online/: file.c  script.php
parser/: Makefile  SphereTest.xml  a.out  char_function.c  get_next_line.c  getters.c  init.c  main.c  my_conf.xml  my_getnbr_base.c  parse_coord.c  parse_eye.c  parse_limit_scene.c  parse_mesh.c  parse_mesh_next.c  parse_obj.c  parse_phong.c  parse_spot.c  parse_texture.c  parse_texture_next.c  parser  pringles.xml  toto
scenes/: ball.xml  limit.xml  my_conf.xml  pringles.xml  seg.xml  sphere.xml
sources/: #init_system.c#  #init_tore_norm.c#  #rtracer.c#  add_cone.c  add_cylinder.c  add_filter.c  add_holed_cube.c  add_hyperboloid.c  add_moebius.c  add_obj.c  add_paraboloid.c  add_plan.c  add_sphere.c  add_spot.c  add_texture.c  add_tore.c  alb_load_time.c  antialiasing.c  average.c  basic_scenes.c  bomb_ray.c  bumpping.c  cell_shading.c  cmp_limit.c  convo_filter.c  cubic_solver.c  cylinder_texture.c  degre_4_solver.c  disp_color.c  disp_color2.c  draw_hyperboloid.c  draw_moebius.c  duplicate_eye.c  duplicate_img.c  (+74 more)
(+10 files in other folders)
